<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:background="@drawable/popup_background">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/kara"
            android:src="@drawable/win" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/con"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/advent_pro_medium"
            android:textSize="24sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/advent_pro_medium"
            android:textSize="24sp"
            android:layout_marginTop="25dp"/>

        <TextView
            android:id="@+id/winnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/advent_pro_medium"
            android:text="@string/winNameKara"
            android:textColor="@color/green_correct"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/homeButton"
            android:layout_width="103dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/advent_pro_medium"
            android:text="@string/pop"
            android:textAlignment="center"
            android:textColor="#FFFF"
            android:textSize="18sp" />


</LinearLayout>